# MODULE.bazel

module(
    name = "flake_farm",
    version = "1.0",
)

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.14.0")

# Add rules_cc for C++ build rules
bazel_dep(name = "rules_cc", version = "0.0.9")

# Add nlohmann/json for JSON parsing
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# Add curl for HTTP requests
bazel_dep(name = "curl", version = "8.8.0.bcr.3")

# Add rapidjson for JSON parsing
bazel_dep(name = "rapidjson", version = "1.1.0")

